exports[`<Panel /> snapshot with body=<div className="test">test</div>, footer=<div className="footer">footer</div> 1`] = `
<div
  className="modal-content ">
  <div
    className="modal-header">
    <h4
      className="modal-title">
      
    </h4>
  </div>
  <div
    className="modal-body">
    <div
      className="test">
      test
    </div>
  </div>
  <div
    className="footer">
    footer
  </div>
</div>
`;

exports[`<Panel /> snapshot with children=<div className="test">test</div> 1`] = `
<div
  className="modal-content ">
  <div
    className="modal-header">
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      onClick={[Function]}
      type="button">
      <span
        aria-hidden="true">
        ×
      </span>
    </button>
    <h4
      className="modal-title">
      
    </h4>
  </div>
  <div
    className="modal-body">
    <div
      className="test">
      test
    </div>
  </div>
</div>
`;

exports[`<Panel /> snapshot with className="modal-default", title=box, text="body text", closeBtn=true 1`] = `
<div
  className="modal-content modal-default">
  <div
    className="modal-header">
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      onClick={null}
      type="button">
      <span
        aria-hidden="true">
        ×
      </span>
    </button>
    <h4
      className="modal-title">
      box
    </h4>
  </div>
  <div
    className="modal-body">
    <div
      className="row pull-center">
      body text
    </div>
  </div>
</div>
`;

exports[`<Panel /> snapshot with no props passed 1`] = `
<div
  className="modal-content ">
  <div
    className="modal-header">
    <h4
      className="modal-title">
      
    </h4>
  </div>
  <div
    className="modal-body">
    <div
      className="row pull-center">
      无相关数据
    </div>
  </div>
</div>
`;
